Fix autocomplete dropdown feedback z-index issues when inside modal

--- a/components/main_layout/stylesheets/form_elements.styl
+++ b/components/main_layout/stylesheets/form_elements.styl
@@ -295,6 +295,7 @@ form.is-validated
       background-color black
       *
         color white
+
 .autocomplete-feedback
   display block
   visibility hidden
@@ -304,12 +305,14 @@ form.is-validated
   right 0
   padding (logo-size / 4) (logo-size / 2)
   line-height logo-size
+  text-align left
   opacity 0
   border 2px solid gray-lighter-color
   border-top none
   background-color gray-lightest-color
   overflow ellipsis
   pointer-events none
+  z-index zindex-modal
 
 // Result lists
 // (typically appended to from autocompletes)
